<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="40dp">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/ll_rocket"
    android:drawableTop="@drawable/icon_rocket"
    android:text="@string/rocket"
    android:layout_marginRight="50dp"
        android:layout_marginLeft="20dp"/>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/ll_softmgr"
    android:drawableTop="@drawable/icon_softmgr"
    android:text="@string/softmgr"
        android:layout_marginRight="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ll_phonemgr"
            android:drawableTop="@drawable/icon_phonemgr"
            android:text="@string/phonemgr" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ll_telmgr"
            android:drawableTop="@drawable/icon_telmgr"
            android:text="@string/telmgr"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ll_filemgr"
            android:drawableTop="@drawable/icon_filemgr"
            android:text="@string/filemgr"
            android:layout_marginRight="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ll_sdclean"
            android:drawableTop="@drawable/icon_sdclean"
            android:text="@string/sdclean" />
    </LinearLayout>
</LinearLayout>